# mtt-tooling

./: .gitignore  Makefile  README.md
mtt-structure-evaluator/: Makefile  README.md  pyproject.toml
mtt-structure-evaluator/examples/: example_structure.json
mtt-structure-evaluator/mtt_structure_evaluator/: __init__.py  cli.py  pdf_scraping.py  s_points.py  scraping.py
mtt-structure-evaluator/mtt_structure_evaluator/structure-pdfs/: sydney-champs-scraper.py
mtt-structure-evaluator/structure-scrapers/: kingslive_scraper.py  kingsroom_scraper.py  sydney_champs_scraper.py
mtt-structure-evaluator/structure-scrapes/: kingslive_tournaments.json  kingsroom_tournaments.json  sydney_champs_tournaments.json
mtt-structure-evaluator/structure-scrapes/kingslive/: kc-churchills-event-10-main-event-day-2.json  kc-churchills-event-10-main-event-flight-1a.json  kc-churchills-event-10-main-event.json  kc-churchills-event-11-series-saver.json  kc-churchills-event-3-mini-main-day-2.json  kc-churchills-event-3-mini-main.json  kc-churchills-event-5-triple-barrel.json  kc-churchills-event-6-pokershop-deepstack.json  kc-churchills-event-7-one-shot-sc.json  kc-churchills-event-8-survivor-bounty.json  kc-churchills-event-9-the-300.json
mtt-structure-evaluator/structure-scrapes/kingsroom/: bella-vista-hotel-tuesday-6k-gtd.json  st-george-leagues-friday-5k-gtd.json  st-george-leagues-monday-5k-gtd.json  wenty-s-wednesday-10k-gtd.json
mtt-structure-evaluator/structure-scrapes/sydney_champs/: event-1-ssssyyyyddddnnnneeeeyyyy-opening-event-cchhaammppss.json  (+11 more)
(+15 files in other folders)
