[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mtt-structure-evaluator"
version = "0.1.0"
description = "CLI tool for MTT S-Points evaluation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
scraping = ["selenium>=4.17", "pdfplumber>=0.11"]

[tool.setuptools]
packages = ["mtt_structure_evaluator"]
